--- a/Episode 05 - Let's get Hooked/package.json
+++ b/Episode 05 - Let's get Hooked/package.json
@@ -14,6 +14,7 @@
     "parcel": "^2.15.4"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.2.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
