--- a/Episode 05 - Let's get Hooked/package.json
+++ b/Episode 05 - Let's get Hooked/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fontsource/poppins": "^5.2.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.30.1"
   }
 }
