--- a/Episode 05 - Let's get Hooked/package.json
+++ b/Episode 05 - Let's get Hooked/package.json
@@ -11,15 +11,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@parcel/transformer-js": "^2.15.4",
     "parcel": "^2.15.4"
   },
   "dependencies": {
     "@fontsource/poppins": "^5.2.6",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.11",
     "init": "^0.1.2",
     "npx": "^10.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "tailwindcss": "^4.1.11"
   }
