--- a/Episode 05 - Let's get Hooked/package.json
+++ b/Episode 05 - Let's get Hooked/package.json
@@ -11,7 +11,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@parcel/transformer-js": "^2.15.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "babel-jest": "^30.0.4",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "parcel": "^2.15.4"
   },
   "dependencies": {
